ultimos cambios con wl wrap correcto, pero a corregir el footer overlapping

--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -5,6 +5,8 @@
 
 html {
   font-size: 62.5%;
+  min-height: 100%;
+  position: relative;
 }
 
 /*Body*/
@@ -31,18 +33,13 @@ h2 {
 }
 
 /*bodyIndex - Grid*/
-.bodyIndex {
-  max-width: 100vw;
-  display: grid;
-  grid-template-columns: 98vw;
-  /*grid-template-rows: 280px 612px 250px 365px 170px;*/
-  grid-template-areas: "header" "video" "presentacion" "propDestacadas" "footer";
-}
 
 /*Header*/
+.main {
+}
+
 .contenedorHeader {
   background-color: rgba(63, 68, 68, 0.068);
-  grid-area: header;
 }
 
 .contenedorHeader {
@@ -66,6 +63,12 @@ h2 {
   width: 100%;
   top: 20rem;
   font-size: 1.5rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .header__menu {
+    font-size: 1.8rem;
+  }
 }
 
 .header__menu ul {
@@ -97,58 +100,78 @@ h2 {
   background-color: rgba(80, 156, 153, 0.699);
 }
 
+.contenido {
+}
+
 /*Body__Presentación*/
+
 .contenedorPresentacion {
   display: grid;
-  grid-template-columns: 2.5fr 1fr;
-  grid-template-columns: 2.2fr 2fr;
-  grid-template-areas: "title title" "text img";
+  grid-template-columns: 1fr;
+  grid-template-rows: 0.1fr 2fr;
+  grid-template-areas: "title title" "cuerpo cuerpo";
   background-color: rgba(63, 68, 68, 0.068);
   margin-top: 2rem;
-  padding-top: 4rem;
-  padding-bottom: 6rem;
-  grid-area: presentacion;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .contenedorPresentacion {
+    padding-bottom: 0rem;
+  }
+}
+
+.presentacion__cuerpo {
+  grid-area: cuerpo;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 95%;
 }
 
 .presentacion_text {
   font-size: 1.6rem;
-  margin-left: 18rem;
-  padding-top: 0.7rem;
+  /*  margin-left: 18rem;
+  margin-right: 8rem;*/
   line-height: 2.5rem;
-  grid-area: text;
+}
+
+@media screen and (max-width: 1024px) {
+  .presentacion_text {
+    margin-left: 8rem;
+    padding-top: 0rem;
+    line-height: 2.2rem;
+  }
 }
 
 .presentacion__title {
   grid-area: title;
 }
 
-.presentacion__img {
-  grid-area: img;
-  display: flex;
-}
-
 .img1 {
-  margin-left: 2rem;
-  margin-top: -15rem;
+  margin-top: -2rem;
+  margin-bottom: 1rem;
 }
 
-.img2 {
-  position: relative;
-  z-index: 1;
-  top: 4rem;
-  margin-left: -8rem;
+@media screen and (max-width: 1024px) {
+  .img1 {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+  }
 }
 
 /*Body__Propiedades Destacadas*/
 .contenedorPropDestacadas {
-  margin: 8rem 0 2rem 0;
+  margin: 5rem 0 2rem 0;
   padding: 0 2rem 0 2rem;
   width: 95vw;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr 300px;
   grid-gap: 1rem;
-  grid-template-areas: "title title title title" "prop prop prop prop";
+  grid-template-areas: "title" "prop";
   justify-content: center;
 }
 
@@ -157,32 +180,16 @@ h2 {
 }
 
 .propDestacadas__grilla {
+  grid-area: prop;
   display: flex;
   flex-wrap: wrap;
-  grid-area: prop;
   justify-content: space-evenly;
 }
 
 .propDestacadas__gallery {
   margin: 1rem;
-  width: 20vw;
+  width: 27rem;
 }
-
-/*.prop1 {
-  grid-area: prop;
-}
-
-.prop2 {
-  grid-area: prop;
-}
-
-.prop3 {
-  grid-area: prop;
-}
-
-.prop4 {
-  grid-area: prop;
-}*/
 
 .propDestacadas__gallery:hover {
   background-color: rgb(174, 223, 215);
@@ -199,13 +206,13 @@ h2 {
 }
 
 /*Footer*/
-footer {
+
+.contenedorFooter {
   text-align: center;
   font-size: 1.4rem;
   padding-bottom: 2rem;
   background-color: rgb(255, 255, 255);
-  grid-area: footer;
-  display: block;
+  width: 100%;
 }
 
 .footer__social img {
